# langgraph-essentials-python

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: LANGSMITH.md  OLLAMA.md
labs/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6_application.ipynb
notebooks/: README.md
ops/ollama/: Modelfile
src/langgraph_course/: __init__.py  models.py  settings.py
src/langgraph_course/email_workflow/: __init__.py  graph.py  helpers.py  nodes.py  prompts.py  services.py  session.py  types.py
src/langgraph_course/email_workflow/langsmith/: __init__.py  client.py  config.py  datasets.py  evaluation_cases.py  evaluation_targets.py  evaluators.py  feedback.py  metadata.py  run_evaluations.py  scripted_model.py  seed_dataset.py  tracing.py  verify.py
tests/: test_email_workflow.py  test_email_workflow_evaluations.py  test_langsmith_config.py  test_langsmith_feedback.py  test_langsmith_metadata.py  test_settings.py
